--- a/.github/workflows/cobrinha.yml
+++ b/.github/workflows/cobrinha.yml
@@ -6,11 +6,13 @@ on:
   workflow_dispatch:
 
 permissions:
-  contents: write  # garante permissão de escrita no repositório
+  contents: write  # permite commit/push
+  pages: write     # permite publicar no GitHub Pages
+  id-token: write  # necessário para actions de Pages
 
 jobs:
   update-snake:
-    name: Atualiza Snake Contribution
+    name: Atualiza Snake e Publica Pages
     runs-on: ubuntu-latest
     steps:
       # Clona o repositório
@@ -23,8 +25,8 @@ jobs:
           github_user_name: EduardoFedeli
           svg_out_path: dist/github-contribution-grid-snake.svg
 
-      # Commit & Push diretamente para branch "output"
-      - name: Commit and Push SVG
+      # Commit & Push para branch "output"
+      - name: Commit Changes
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
@@ -34,3 +36,14 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+      # Publica a branch "output" no GitHub Pages
+      - name: Deploy to GitHub Pages
+        uses: actions/configure-pages@v3
+
+      - name: Upload Pages
+        uses: actions/upload-pages-artifact@v1
+        with:
+          path: dist
+
+      - name: Publish Pages
+        uses: actions/deploy-pages@v1
