--- a/.github/workflows/cobrinha.yml
+++ b/.github/workflows/cobrinha.yml
@@ -16,6 +16,10 @@ jobs:
       # Clona o repositório
       - uses: actions/checkout@v3
 
+      # Cria a pasta dist para evitar erros
+      - name: Criar pasta dist
+        run: mkdir -p dist
+
       # Gera a snake SVG
       - name: Gerar Snake SVG
         uses: Platane/snk@master
